# Rankify

./: .cursorrules  .gitignore  .readthedocs.yaml  CITATION.cff  README-PyPI.md  README.md  README_zh.md  mkdocs.yml  pre_publication_test.py  pyproject.toml
.github/workflows/: manual-publish.yml  python-publish.yml
docs/: index.md  mkdocs.yml  requirements.txt
docs/api/: dataset.md  generator.md  metrics.md  reranking.md  retrievers.md  utils.md
docs/api/generators/: base.md  fid.md  generator.md  in_context_ralm.md
docs/api/rerankings/: base.md  blender.md  colbert_ranker.md  echo_rank.md  first_ranker.md  flashrank.md  incontext_reranker.md  inrank.md  listt5.md  lit5.md  llm2vec_reranker.md  llm_layerwise_ranker.md  monobert.md  monot5.md  rank_fid.md  rankgpt.md  rankt5.md  reranking.md  sentence_transformer_reranker.md  splade_reranker.md  transformer_reranker.md  twolar.md  upr.md  vicuna_reranker.md  zephyr_reranker.md
docs/api/retrievers/: bge.md  bm25.md  colbert.md  contriever.md  dense.md  retriever.md
docs/docs/: contribution.md  getting-started.md  index.md  installation.md
docs/docs/api/: agent.md  dataset.md  index.md  indexing.md  metrics.md  tools.md
docs/docs/api/generators/: base.md  fid.md  generator.md  in_context_ralm.md  prompt_generator.md  prompt_template.md
docs/docs/api/rerankings/: apiranker.md  base.md  blender.md  colbert_ranker.md  echo_rank.md  first_ranker.md  flashrank.md  incontext_reranker.md  inrank.md  listt5.md  lit5.md  llm2vec_reranker.md  llm_layerwise_ranker.md  monobert.md  monot5.md  rank_fid.md  rankgpt.md  rankt5.md  reranking.md  sentence_transformer_reranker.md  splade_reranker.md  transformer_reranker.md  twolar.md  upr.md  vicuna_reranker.md  (+1 more)
docs/docs/js/: runllm-widget.js
docs/docs/tutorials/: index.md
docs/overrides/: home.html  main.html
docs/overrides/partials/: footer.html  tabs.html
examples/: RAGAS_metrices.py  agent_examples.py  benchmark_summary.txt  demo.py  generator.py  generator_chain_of_thought.py  generator_custom_prompt.py  generator_fid.py  generator_huggingface.py  generator_litellm.py  generator_new.py  generator_openai.py  generator_openai_litellm.py  generator_ralm.py  generator_react.py  generator_self_consistency.py  generator_vllm.py  indexing.py  indexing_demo.py  rag_evaluation.py  rag_methods_evaluation.py  reranking.py  reranking_example.py  retreiver.py  retrieved_dataset.py  sample.jsonl  test_bge.py  test_bm25.py  test_colbert.py  test_contriever.py  test_dpr.py
examples/bm25_index/: id_mapping.json
examples/bm25_index/bm25_index_/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1  title_map.json
examples/custom_datasets/: FutureQueryEval_qrels.txt  log.json  test.py
examples/generator_examples/: generator_basic_rag.py  generator_ralm.py  generator_react_rag.py  generator_self_consistency_rag.py  generator_zero_shot.py
experiments/: analyze_benchmarks.py  benchmark_indexing.py  collect_benchmarks.py
experiments/configs/: bge_wiki.json  bge_wiki_test.json  bm25_wiki.json  bm25_wiki_test.json  colbert_wiki.json  colbert_wiki_test.json  contriever_wiki.json  contriever_wiki_test.json  dpr_wiki.json  dpr_wiki_test.json
rankify/: __init__.py  __main__.py  __version__.py  pipeline.py  requirements.txt
rankify/agent/: __init__.py  agent.py  model_registry.py  recommender.py
rankify/cli/: cli.py
rankify/dataset/: dataset.py
rankify/generator/: __init__.py  base.py  base_rag_model.py  fid.py  generator.py  in_context_ralm.py  model_factory.py  prompt_generator.py  prompt_template.py
rankify/generator/models/: __init__.py  base_rag_model.py  fid_model.py  huggingface_model.py  litellm_model.py  model_factory.py  openai_model.py  vllm_model.py
rankify/generator/rag_methods/: __init__.py  base_rag_method.py  basic_rag.py  chain_of_thought_rag.py  fid_rag_method.py  in_context_ralm_rag.py  react_rag.py  self_consistency_rag.py  zero_shot.py
rankify/indexing/: __init__.py  ance_indexer.py  base_indexer.py  bge_indexer.py  bm25_indexer.py  colbert_indexer.py  contriever_indexer.py  dpr_indexer.py  format_converters.py  lucene_indexer.py
rankify/integrations/: __init__.py
rankify/metrics/: __init__.py  base_metrics.py  generator_metrics.py  metrics.py  ragas_bridge.py  retriever_metrics.py
rankify/models/: apiranker.py  base.py  blender_reranker.py  colbert_ranker.py  echorank.py  first_reranker.py  flashrank.py  incontext_reranker.py  inranker.py  listt5.py  lit5_reranker.py  llm2vec_reranker.py  llm_layerwise_ranker.py  monobert.py  monot5.py  monot5_.py  rank_fid.py  rankgpt.py  rankt5.py  reranking.py  sentence_transformer_reranker.py  splade_reranker.py  transformer_ranker.py  twolar.py  upr.py  vicuna_reranker.py  zephyr_reranker.py
rankify/n_retreivers/:  __init__.py  ance_retriever.py  base_retriever.py  bm25_retriever.py  colbert_retriever.py  contriever_retriever.py  dense_retriever.py  hyde_retriever.py  index_manager.py  online_retriever.py  retriever.py
rankify/retrievers/: BGERetriever.py  OnlineRetriever.py  ance_retriever.py  bge_retriever.py  bm25.py  bm25_retriever.py  colbert.py  contriever.py  dense_retriever.py  dpr.py  hybrid_retriever.py  hyde.py  index_manager.py  retriever.py  utils.py  wikipedia_cleaner.py
rankify/server/: __init__.py  server.py
rankify/tools/: .env.example  Tools.py
rankify/ui/: __init__.py  playground.py
rankify/utils/: helper.py  pre_defind_models.py  pre_defined_datasets.py  pre_defined_methods.py  pre_defined_methods_retrievers.py
rankify/utils/api/: claudeclient.py  litellmclient.py  openaiclient.py
rankify/utils/dataset/: download.py  utils.py
rankify/utils/generator/: download.py  generator_models.py
rankify/utils/models/: colbert.py  fidt5.py  llm2vec.py  rank_listwise_os_llm.py  twolar_utils.py
(+150 files in other folders)
